--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@tanstack/react-virtual": "^3.13.9",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
+    "formidable": "^3.5.4",
     "input-otp": "^1.4.2",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
@@ -71,6 +73,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
