--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "^0.0.13",
     "@tanstack/react-virtual": "^3.13.9",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.1",
@@ -46,7 +48,6 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
-    "formidable": "^3.5.4",
     "input-otp": "^1.4.2",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
@@ -54,6 +55,7 @@
     "mongoose": "^8.12.2",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
+    "rate-limiter-flexible": "^7.1.1",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
